--- a/mapreducefilter/index.html
+++ b/mapreducefilter/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>VAR, LET & CONST</title>
+    <title>MAP, FILTER & REDUCE</title>
 </head>
 <body>
     <div>
-        <h1>Most asked Interview Questions on : VAR, LET & CONST</h1>
+        <h1>Most asked Interview Questions on : MAP, FILTER & REDUCE</h1>
     </div>
+
     <script src="index.js"></script>
 </body>
 </html>
